<resources>
    <string name="app_name">RBCCodeAssignment</string>
    <string name="location_hint">Ex. Toronto</string>
    <string name="term_hint">Ex. Food or Starbucks</string>
    <string name="submit">Search</string>
    <string name="search_term">Search Term</string>
    <string name="search_location">Search Location</string>
    <string name="home_fragment_title">Yelp Assignment</string>
    <string name="no_results">No Results Found!!! \nPlease check your internet.</string>
    <string name="button_call_description">Button to make the Call</string>
    <string name="item_image_description">Restaurant Image from URL</string>
    <string name="back_button">Back button</string>
    <string name="refresh">Refresh</string>
    <string name="link_button">Link Button</string>
    <string name="map_button">Map Button</string>
    <string name="title">Title</string>
    <string name="review">Review</string>
    <string name="sort_by">Sort By:</string>
</resources>